Add TypeScript definitions.

--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "commonmark-react-renderer": "^4.2.4",
     "in-publish": "^2.0.0"
   },
+  "types": "./react-markdown.d.ts",
   "peerDependencies": {
+    "@types/react": "*",
     "react": ">=0.13.3"
   }
 }
