--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "html-to-react": "^1.3.4",
     "mdast-add-list-metadata": "1.0.1",
     "prop-types": "^15.7.2",
+    "react-is": "^16.8.6",
     "remark-parse": "^5.0.0",
     "unified": "^6.1.5",
     "unist-util-visit": "^1.3.0",
