--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
     "staticpath": "demo/dist"
   },
   "dependencies": {
+    "@types/mdast": "^3.0.3",
+    "@types/unist": "^2.0.3",
     "html-to-react": "^1.3.4",
     "mdast-add-list-metadata": "1.0.1",
     "prop-types": "^15.7.2",
     "react-is": "^16.8.6",
-    "remark-parse": "^6.0.3",
-    "unified": "^7.1.0",
-    "unist-util-visit": "^1.4.1",
+    "remark-parse": "^8.0.0",
+    "unified": "^9.0.0",
+    "unist-util-visit": "^2.0.0",
     "xtend": "^4.0.1"
   },
   "devDependencies": {
@@ -61,14 +63,14 @@
     "eslint-config-sanity": "^4.0.2",
     "eslint-plugin-react": "^7.14.2",
     "gh-pages-deploy": "^0.5.1",
-    "jest": "^24.8.0",
+    "jest": "^26.0.1",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.6",
     "react-test-renderer": "^16.8.6",
     "remark-breaks": "^1.0.3",
-    "remark-shortcodes": "^0.2.1",
+    "remark-shortcodes": "^0.3.1",
     "remark-toc": "^5.1.1",
     "rimraf": "^2.6.3",
     "uglify-js": "^3.6.0",
