--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "main": "lib/react-markdown.js",
   "unpkg": "umd/react-markdown.js",
   "scripts": {
-    "analyze": "npm run clean && npm run compile && NODE_ENV=production ANALYZE_BUNDLE=1 webpack -p",
-    "build": "npm run clean && npm run compile && NODE_ENV=production webpack -p && npm run build:demo",
-    "build:demo": "NODE_ENV=production webpack -p --config webpack.config.demo.js",
+    "build": "npm run clean && npm run compile && rollup -c && npm run build:demo",
+    "build:demo": "rollup -c rollup.config.demo.js",
     "postbuild": "echo 'Ensuring ES5 compatibility...' && uglifyjs umd/react-markdown.js > /dev/null && echo 'Yep!'",
     "clean": "rimraf lib/",
     "compile": "babel --copy-files -d lib/ src/",
@@ -21,12 +20,12 @@
     "prepublishOnly": "npm run qa",
     "qa": "npm test && npm run build",
     "test": "jest --coverage --env=jsdom",
-    "watch": "webpack --watch",
-    "watch:demo": "webpack --watch --config webpack.config.demo.js"
+    "watch": "rollup -wc --watch",
+    "watch:demo": "rollup -wc rollup.config.demo.js"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:rexxars/react-markdown.git"
+    "url": "git@github.com:remarkjs/react-markdown.git"
   },
   "author": "Espen Hovlandsdal <espen@hovlandsdal.com>",
   "license": "MIT",
@@ -50,10 +49,15 @@
     "xtend": "^4.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@rollup/plugin-babel": "^5.0.0",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-json": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.0.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "enzyme": "^3.10.0",
@@ -64,20 +68,21 @@
     "eslint-plugin-react": "^7.14.2",
     "gh-pages-deploy": "^0.5.1",
     "jest": "^26.0.1",
-    "prettier": "^1.18.2",
-    "react": "^16.8.6",
+    "prettier": "^2.0.0",
+    "react": "^16.0.0",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.6",
     "react-test-renderer": "^16.8.6",
     "remark-breaks": "^1.0.3",
     "remark-shortcodes": "^0.3.1",
-    "remark-toc": "^5.1.1",
-    "rimraf": "^2.6.3",
-    "uglify-js": "^3.6.0",
-    "webpack": "^4.35.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.5"
+    "remark-toc": "^7.0.0",
+    "rimraf": "^3.0.0",
+    "rollup": "^2.0.0",
+    "rollup-plugin-node-polyfills": "^0.2.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "uglify-js": "^3.6.0"
   },
+  "browserslist": "> 0.25%, not dead",
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0"
   },
