Refactor build scripts, tooling
* Use prettier
* Clean config files
* Remove `package-lock.json`
* Move config to `package.json` when possible
* Update metadata
* Use `files/` instead of `.npmignore`
* Change build scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: node_js
 node_js:
-  - '10'
-  - '12'
-  - '14'
+  - lts/dubnium
+  - node
 after_script:
   - npm install codeclimate-test-reporter && cat coverage/lcov.info | codeclimate
 env:
