--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,25 @@
 {
   "presets": [
     "@babel/preset-react",
-    ["@babel/preset-env", {
-      "targets": {
-        "browsers": ["ie >= 9"]
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "browsers": ["ie >= 9"]
+        }
       }
-    }]
+    ]
   ],
-
   "env": {
     "production": {
-      "plugins": [["transform-react-remove-prop-types", {
-        "removeImport": true
-      }]]
+      "plugins": [
+        [
+          "transform-react-remove-prop-types",
+          {
+            "removeImport": true
+          }
+        ]
+      ]
     }
   }
 }
