--- a/package.json
+++ b/package.json
@@ -1,42 +1,41 @@
 {
   "name": "react-markdown",
-  "description": "Renders Markdown as React components",
   "version": "4.3.1",
+  "description": "Render Markdown as React components",
+  "license": "MIT",
   "keywords": [
+    "remark",
+    "unified",
     "markdown",
+    "commonmark",
+    "gfm",
+    "ast",
     "react",
-    "react-component"
+    "react-component",
+    "component"
   ],
-  "main": "lib/react-markdown.js",
-  "unpkg": "umd/react-markdown.js",
-  "scripts": {
-    "analyze": "npm run clean && npm run compile && NODE_ENV=production ANALYZE_BUNDLE=1 webpack -p",
-    "build": "npm run clean && npm run compile && NODE_ENV=production webpack -p && npm run build:demo",
-    "build:demo": "NODE_ENV=production webpack -p --config webpack.config.demo.js",
-    "postbuild": "echo 'Ensuring ES5 compatibility...' && uglifyjs umd/react-markdown.js > /dev/null && echo 'Yep!'",
-    "clean": "rimraf lib/",
-    "compile": "babel --copy-files -d lib/ src/",
-    "deploy": "gh-pages-deploy",
-    "posttest": "eslint .",
-    "prepublishOnly": "npm run qa",
-    "qa": "npm test && npm run build",
-    "test": "jest --coverage --env=jsdom",
-    "watch": "webpack --watch",
-    "watch:demo": "webpack --watch --config webpack.config.demo.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:rexxars/react-markdown.git"
+  "repository": "remarkjs/react-markdown",
+  "bugs": "https://github.com/remarkjs/react-markdown/issues",
+  "funding": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/unified"
   },
   "author": "Espen Hovlandsdal <espen@hovlandsdal.com>",
-  "license": "MIT",
-  "gh-pages-deploy": {
-    "noprompt": true,
-    "prep": [
-      "build"
-    ],
-    "staticpath": "demo/dist"
-  },
+  "contributors": [
+    "Espen Hovlandsdal <espen@hovlandsdal.com>",
+    "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
+  ],
+  "types": "index.d.ts",
+  "main": "lib/react-markdown.js",
+  "unpkg": "umd/react-markdown.js",
+  "files": [
+    "lib/",
+    "plugins/",
+    "umd/",
+    "index.d.ts",
+    "with-html.d.ts",
+    "with-html.js"
+  ],
   "dependencies": {
     "@types/mdast": "^3.0.3",
     "@types/unist": "^2.0.3",
@@ -44,49 +43,117 @@
     "mdast-add-list-metadata": "1.0.1",
     "prop-types": "^15.7.2",
     "react-is": "^16.8.6",
-    "remark-parse": "^8.0.0",
+    "remark-parse": "^9.0.0",
     "unified": "^9.0.0",
     "unist-util-visit": "^2.0.0",
     "xtend": "^4.0.1"
   },
+  "peerDependencies": {
+    "react": "^15.0.0 || ^16.0.0"
+  },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@rollup/plugin-babel": "^5.0.0",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-json": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.0.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^6.0.0",
-    "eslint-config-prettier": "^5.0.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-config-sanity": "^4.0.2",
     "eslint-plugin-react": "^7.14.2",
     "gh-pages-deploy": "^0.5.1",
     "jest": "^26.0.1",
-    "prettier": "^1.18.2",
-    "react": "^16.8.6",
+    "prettier": "^2.0.0",
+    "react": "^16.0.0",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.6",
     "react-test-renderer": "^16.8.6",
-    "remark-breaks": "^1.0.3",
-    "remark-shortcodes": "^0.3.1",
-    "remark-toc": "^5.1.1",
-    "rimraf": "^2.6.3",
-    "uglify-js": "^3.6.0",
-    "webpack": "^4.35.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.5"
+    "remark-gfm": "^1.0.0",
+    "remark-math": "^4.0.0",
+    "remark-toc": "^7.0.0",
+    "rimraf": "^3.0.0",
+    "rollup": "^2.0.0",
+    "rollup-plugin-node-polyfills": "^0.2.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "uglify-js": "^3.6.0"
   },
-  "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0"
+  "scripts": {
+    "demo": "rollup --silent -c rollup.config.demo.js",
+    "build-lib": "rimraf lib/ && babel src/ --quiet --copy-files -d lib/",
+    "build-umd": "rollup --silent -c",
+    "postbuild-umd": "printf 'ES5? ' && uglifyjs umd/react-markdown.js > /dev/null && echo 'Yes'",
+    "build": "npm run build-lib && npm run build-umd",
+    "format": "prettier . -w --loglevel warn && eslint . --fix",
+    "deploy": "gh-pages-deploy",
+    "test-api": "jest",
+    "test-coverage": "jest --coverage",
+    "test": "npm run build && npm run format && npm run test-coverage"
+  },
+  "browserslist": "> 0.25%, not dead",
+  "gh-pages-deploy": {
+    "noprompt": true,
+    "prep": [
+      "build"
+    ],
+    "staticpath": "demo/dist"
   },
   "jest": {
-    "verbose": true,
-    "testEnvironment": "node",
-    "coverageDirectory": "coverage",
-    "collectCoverageFrom": [
-      "src/**.js"
-    ]
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    }
+  },
+  "prettier": {
+    "bracketSpacing": false,
+    "printWidth": 100,
+    "semi": false,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none",
+    "useTabs": false
+  },
+  "eslintConfig": {
+    "extends": [
+      "sanity",
+      "prettier",
+      "plugin:react/recommended"
+    ],
+    "plugins": [
+      "react"
+    ],
+    "env": {
+      "node": true,
+      "browser": true
+    },
+    "parserOptions": {
+      "ecmaVersion": 2018,
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
+    "rules": {
+      "strict": 0,
+      "complexity": [
+        "warn",
+        15
+      ]
+    },
+    "settings": {
+      "react": {
+        "version": "15.0"
+      }
+    }
   }
 }
