Rewrite readme for unified, more examples
* Lowercase filenames to scream less
* Add `remark-cli`, `remark-preset-wooorm` to format prose
* Use imports and fancy new JS features
* Add link to a markdown cheatsheet, as many questions are about that
* Add details tags showing equivalent JSX for examples, to clarify how markdown
  works
* Refactor options list, clean signatures
* Add examples on plugins, plugins w/ options, renderers (syntax highlighting),
  and combining plugins w/ renderers (math)
* Add sections on why to use this, security, contributing, related projects
* Add test for `react-katex` integration

Closes GH-70.
Closes GH-191.
Related to GH-474.
Closes GH-479.
Closes GH-480.
Related to GH-483.

--- a/package.json
+++ b/package.json
@@ -73,9 +73,12 @@
     "react": "^16.0.0",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.6",
+    "react-katex": "^2.0.0",
     "react-test-renderer": "^16.8.6",
+    "remark-cli": "^9.0.0",
     "remark-gfm": "^1.0.0",
     "remark-math": "^4.0.0",
+    "remark-preset-wooorm": "^8.0.0",
     "remark-toc": "^7.0.0",
     "rimraf": "^3.0.0",
     "rollup": "^2.0.0",
@@ -88,12 +91,21 @@
     "build-umd": "rollup --silent -c",
     "postbuild-umd": "printf 'ES5? ' && uglifyjs react-markdown.min.js > /dev/null && echo 'Yes'",
     "build": "npm run build-lib && npm run build-umd",
-    "format": "prettier . -w --loglevel warn && eslint . --fix",
+    "format": "remark . -qfo --ignore-pattern test/ && prettier . -w --loglevel warn && eslint . --fix",
     "test-api": "jest",
     "test-coverage": "jest --coverage",
     "test": "npm run build && npm run format && npm run test-coverage"
   },
   "browserslist": "> 0.25%, not dead",
+  "remarkConfig": {
+    "plugins": [
+      "preset-wooorm",
+      [
+        "lint-no-html",
+        false
+      ]
+    ]
+  },
   "jest": {
     "coverageThreshold": {
       "global": {
