--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "xtend": "^4.0.1"
   },
   "peerDependencies": {
+    "@types/react": "^15.0.0 || ^16.0.0",
     "react": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
@@ -61,20 +62,23 @@
     "@rollup/plugin-json": "^4.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.0.0",
+    "@types/react": "^16.0.0",
+    "@types/react-dom": "^16.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "dtslint": "^4.0.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-adapter-react-16": "^1.0.0",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.0.0",
-    "eslint-config-sanity": "^4.0.2",
-    "eslint-plugin-react": "^7.14.2",
-    "jest": "^26.0.1",
+    "eslint-config-sanity": "^4.0.0",
+    "eslint-plugin-react": "^7.0.0",
+    "jest": "^26.0.0",
+    "npm-run-all": "^4.0.0",
     "prettier": "^2.0.0",
     "react": "^16.0.0",
-    "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.0.0",
     "react-katex": "^2.0.0",
-    "react-test-renderer": "^16.8.6",
+    "react-test-renderer": "^16.0.0",
     "remark-cli": "^9.0.0",
     "remark-gfm": "^1.0.0",
     "remark-math": "^4.0.0",
@@ -84,7 +88,8 @@
     "rollup": "^2.0.0",
     "rollup-plugin-node-polyfills": "^0.2.0",
     "rollup-plugin-terser": "^7.0.0",
-    "uglify-js": "^3.6.0"
+    "typescript": "^4.0.0",
+    "uglify-js": "^3.0.0"
   },
   "scripts": {
     "build-lib": "rimraf lib/ && babel src/ --quiet --copy-files -d lib/",
@@ -92,9 +97,10 @@
     "postbuild-umd": "printf 'ES5? ' && uglifyjs react-markdown.min.js > /dev/null && echo 'Yes'",
     "build": "npm run build-lib && npm run build-umd",
     "format": "remark . -qfo --ignore-pattern test/ && prettier . -w --loglevel warn && eslint . --fix",
-    "test-api": "jest",
-    "test-coverage": "jest --coverage",
-    "test": "npm run build && npm run format && npm run test-coverage"
+    "test": "run-s build format test:*",
+    "test:unit": "jest --coverage",
+    "test:lint": "eslint .",
+    "test:types": "dtslint ."
   },
   "browserslist": "> 0.25%, not dead",
   "remarkConfig": {
