--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
   "dependencies": {
     "@types/mdast": "^3.0.3",
     "@types/unist": "^2.0.3",
-    "html-to-react": "^1.3.4",
+    "html-to-react": "^1.4.5",
     "mdast-add-list-metadata": "1.0.1",
     "prop-types": "^15.7.2",
-    "react-is": "^16.8.6",
+    "react-is": "^17.0.0",
     "remark-parse": "^9.0.0",
     "unified": "^9.0.0",
     "unist-util-visit": "^2.0.0",
@@ -50,7 +50,7 @@
   },
   "peerDependencies": {
     "@types/react": "^15.0.0 || ^16.0.0",
-    "react": "^15.0.0 || ^16.0.0"
+    "react": ">=16"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
@@ -64,10 +64,10 @@
     "@rollup/plugin-replace": "^2.0.0",
     "@types/react": "^16.0.0",
     "@types/react-dom": "^16.0.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.1.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "dtslint": "^4.0.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.0.0",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-sanity": "^4.0.0",
@@ -75,10 +75,10 @@
     "jest": "^26.0.0",
     "npm-run-all": "^4.0.0",
     "prettier": "^2.0.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
     "react-katex": "^2.0.0",
-    "react-test-renderer": "^16.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-test-renderer": "^17.0.0",
     "remark-cli": "^9.0.0",
     "remark-gfm": "^1.0.0",
     "remark-math": "^4.0.0",
