Unlock peer dependency on React to allow v17
* Fix to remove 15, which didn’t work anymore: this would normally be
  breaking (and we take deprecating older versions seriously), but as
  it didn’t work before, this change instead catches problems earlier
* Allow React 17 (and later) as a peer dependency: we can’t actually
  add code to test this yet because we’re waiting for our test
  frameworks to update too (see GH-498), but checking locally React 17
  seems supported

Related to: GH-498.

--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "xtend": "^4.0.1"
   },
   "peerDependencies": {
-    "@types/react": "^15.0.0 || ^16.0.0",
-    "react": "^15.0.0 || ^16.0.0"
+    "@types/react": ">=16",
+    "react": ">=16"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
