--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
   "dependencies": {
     "@types/mdast": "^3.0.3",
     "@types/unist": "^2.0.3",
-    "html-to-react": "^1.3.4",
+    "html-to-react": "^1.4.5",
     "mdast-add-list-metadata": "1.0.1",
     "prop-types": "^15.7.2",
-    "react-is": "^16.8.6",
+    "react-is": "^17.0.0",
     "remark-parse": "^9.0.0",
     "unified": "^9.0.0",
     "unist-util-visit": "^2.0.0",
@@ -57,11 +57,13 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@matejmazur/react-katex": "^3.0.0",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-json": "^4.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-replace": "^2.0.0",
+    "@testing-library/react": "^11.0.0",
     "@types/react": "^16.0.0",
     "@types/react-dom": "^16.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -71,12 +73,12 @@
     "eslint-config-sanity": "^4.0.0",
     "eslint-plugin-react": "^7.0.0",
     "jest": "^26.0.0",
+    "katex": "^0.12.0",
     "npm-run-all": "^4.0.0",
     "prettier": "^2.0.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-katex": "^2.0.0",
-    "react-test-renderer": "^16.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-test-renderer": "^17.0.0",
     "remark-cli": "^9.0.0",
     "remark-gfm": "^1.0.0",
     "remark-math": "^4.0.0",
