Add more contributors

--- a/package.json
+++ b/package.json
@@ -23,7 +23,49 @@
   "author": "Espen Hovlandsdal <espen@hovlandsdal.com>",
   "contributors": [
     "Espen Hovlandsdal <espen@hovlandsdal.com>",
-    "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
+    "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
+    "Thomas Lindstrøm <t@hom.as>",
+    "Fabian Irsara <info@fabianirsara.com>",
+    "René Kooi <renee@kooi.me>",
+    "Nicolas Venegas <nvenegas@atlassian.com>",
+    "Christian Murphy <christian.murphy.42@gmail.com>",
+    "Linus Unnebäck <linus@folkdatorn.se>",
+    "Peng Guanwen <pg999w@outlook.com>",
+    "mudrz <mudrz@outlook.com>",
+    "Jesse Pinho <jesse@jessepinho.com>",
+    "Florentin Luca Rieger <florentin.rieger@gmail.com>",
+    "Frank <frankieali4@gmail.com>",
+    "Igor Kamyshev <garik.novel@gmail.com>",
+    "Jack Williams <jsw547@gmail.com>",
+    "Jakub Chrzanowski <jakub@chrzanowski.info>",
+    "Jeremy Moseley <jeremy@jeremymoseley.net>",
+    "Kelvin Chan <kchan@securitycompass.com>",
+    "Kohei Asai <me@axross.io>",
+    "Marshall Smith <marshall@radialdevgroup.com>",
+    "Nathan Bierema <nbierema@gmail.com>",
+    "Petr Gazarov <petrgazarov@gmail.com>",
+    "Phil Rajchgot <tophil@outlook.com>",
+    "Rasmus Eneman <rasmus@eneman.eu>",
+    "Riku Rouvila <riku.rouvila@gmail.com>",
+    "Robin Wieruch <wrobin@gmx.net>",
+    "Rostyslav Melnychuk <blackswordgc@gmail.com>",
+    "Ted Piotrowski <tppiotrowski@gmail.com>",
+    "Thibaud Courtoison <do.not.press.enter@gmail.com>",
+    "Tiago Roldão <focus5.6@gmail.com>",
+    "cerkiewny <mstarzycki@gmail.com>",
+    "evoye <rosej@gmx.net>",
+    "gRoberts84 <gavin@gav-roberts.co.uk>",
+    "Alexander Wallin <office@alexanderwallin.com>",
+    "vanchagreen <vanchagreen@gmail.com>",
+    "Alexander Wong <admin@alexander-wong.com>",
+    "André Staltz <andre@staltz.com>",
+    "Angus MacIsaac <angus.macisaac@busbud.com>",
+    "Beau Roberts <beau.roberts@autodesk.com>",
+    "Charlie Chen <doveccl@live.com>",
+    "Christoph Werner <christoph@codepunkt.de>",
+    "Danny <dannyharding10@gmail.com>",
+    "Dennis S <denis.s@svsg.co>",
+    "Evan Hensleigh <futuraprime@gmail.com>"
   ],
   "types": "index.d.ts",
   "main": "lib/react-markdown.js",
