Replace renderers with components
* Replace `renderers` w/ `components`
* Replace `allowNode` w/ `allowElement`, which is now given a hast
  element (as the first parameter)
* Replace `allowedTypes` w/ `allowedElements`
* Replace `disallowedTypes` w/ `disallowedElements`
* Change signature of `linkTarget` and `transformLinkUri`, which are now
  given hast children (as the second parameter)
* Change signature of `transformImageUri`, which is now given the `alt`
  string as the second parameter (instead of the fourth)
* Replace `plugins` w/ `remarkPlugins` (backwards compatible change)
* Add `rehypePlugins`
* Change `includeNodeIndex` to `includeElementIndex`: it still sets an
  `index`, but that value now represents the number of preceding elements,
  it also sets a `siblingCount` (instead of `parentChildCount`) with
  the number of sibling elements in the parent
* The `columnAlignment` prop is no longer given to table elements:
  it’s available as `style` on `th` and `td` elements instead
* The `spread` prop is no longer given to list elements: it’s already
  handled

--- a/package.json
+++ b/package.json
@@ -79,14 +79,19 @@
     "with-html.js"
   ],
   "dependencies": {
-    "@types/mdast": "^3.0.3",
+    "@types/hast": "^2.3.0",
     "@types/unist": "^2.0.3",
+    "comma-separated-tokens": "^1.0.0",
     "html-to-react": "^1.4.5",
-    "mdast-add-list-metadata": "1.0.1",
     "prop-types": "^15.7.2",
+    "property-information": "^5.0.0",
     "react-is": "^17.0.0",
     "remark-parse": "^9.0.0",
+    "remark-rehype": "^8.0.0",
+    "space-separated-tokens": "^1.1.0",
+    "style-to-object": "^0.3.0",
     "unified": "^9.0.0",
+    "unist-util-is": "^4.1.0",
     "unist-util-visit": "^2.0.0"
   },
   "peerDependencies": {
