Replace `renderers` w/ `components`, remove HTML parser from core (#563)
* Replace `renderers` w/ `components`
* Replace `allowNode` w/ `allowElement`, which is now given a hast element (as
  the first parameter)
* Replace `allowedTypes` w/ `allowedElements`
* Replace `disallowedTypes` w/ `disallowedElements`
* Change signature of `linkTarget` and `transformLinkUri`, which are now given
  hast children (as the second parameter)
* Change signature of `transformImageUri`, which is now given the `alt` string
  as the second parameter (instead of the fourth)
* Replace `plugins` w/ `remarkPlugins` (backwards compatible change)
* Add `rehypePlugins`
* Change `includeNodeIndex` to `includeElementIndex`: it still sets an `index`,
  but that value now represents the number of preceding elements, it also sets a
  `siblingCount` (instead of `parentChildCount`) with the number of sibling
  elements in the parent
* The `columnAlignment` prop is no longer given to table elements: it’s
  available as `style` on `th` and `td` elements instead
* The `spread` prop is no longer given to list elements: it’s already handled

Remove buggy HTML parsers from core

* If you want HTML, add [`rehype-raw`](https://github.com/rehypejs/rehype-raw)
  to `rehypePlugins` and it’ll work without bugs!
* Remove `allowDangerousHtml` (previously called `escapeHtml`) option: pass
  `rehype-raw` in `rehypePlugins` to allow HTML instead
* Remove `with-html.js`, `plugins/html-parser.js` entries from library
* Remove naïve HTML parser too: either use `rehype-raw` to properly support
  HTML, or don’t allow it at all

Closes GH-549.
Closes GH-563.

The following issues are solved as rehype is now available:

Closes GH-522.
Closes GH-465.
Closes GH-427.
Closes GH-384.
Closes GH-356.

The following issues are solved as a proper HTML parser (`rehype-raw`) is now
available:

Closes GH-562.
Closes GH-460.
Closes GH-454.
Closes GH-452.
Closes GH-433.
Closes GH-386.
Cl

--- a/package.json
+++ b/package.json
@@ -74,19 +74,21 @@
     "lib/",
     "plugins/",
     "index.d.ts",
-    "react-markdown.min.js",
-    "with-html.d.ts",
-    "with-html.js"
+    "react-markdown.min.js"
   ],
   "dependencies": {
-    "@types/mdast": "^3.0.3",
+    "@types/hast": "^2.0.0",
     "@types/unist": "^2.0.3",
-    "html-to-react": "^1.4.5",
-    "mdast-add-list-metadata": "1.0.1",
+    "comma-separated-tokens": "^1.0.0",
     "prop-types": "^15.7.2",
+    "property-information": "^5.0.0",
     "react-is": "^17.0.0",
     "remark-parse": "^9.0.0",
+    "remark-rehype": "^8.0.0",
+    "space-separated-tokens": "^1.1.0",
+    "style-to-object": "^0.3.0",
     "unified": "^9.0.0",
+    "unist-util-is": "^4.1.0",
     "unist-util-visit": "^2.0.0"
   },
   "peerDependencies": {
@@ -121,6 +123,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-test-renderer": "^17.0.0",
+    "rehype-raw": "^5.0.0",
     "remark-cli": "^9.0.0",
     "remark-gfm": "^1.0.0",
     "remark-math": "^4.0.0",
@@ -199,19 +202,24 @@
     "overrides": [
       {
         "files": [
-          "src/**/*.js",
-          "with-html.js"
+          "src/**/*.js"
         ],
         "extends": [
           "plugin:es/restrict-to-es2015"
         ]
       },
       {
+        "env": {
+          "jest": true
+        },
         "files": [
           "test/**/*.js"
         ],
         "rules": {
-          "react/no-children-prop": 0
+          "react/no-children-prop": 0,
+          "react/display-name": 0,
+          "no-nested-ternary": 0,
+          "react/prop-types": 0
         }
       }
     ]
