--- a/package.json
+++ b/package.json
@@ -67,11 +67,11 @@
     "Dennis S <denis.s@svsg.co>",
     "Evan Hensleigh <futuraprime@gmail.com>"
   ],
-  "types": "lib/react-markdown.d.ts",
-  "main": "lib/react-markdown.js",
+  "types": "src/react-markdown.d.ts",
+  "main": "src/react-markdown.js",
   "unpkg": "react-markdown.min.js",
   "files": [
-    "lib/",
+    "src/",
     "react-markdown.min.js"
   ],
   "dependencies": {
@@ -93,7 +93,6 @@
     "react": ">=16"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
@@ -138,8 +137,7 @@
   },
   "scripts": {
     "prepack": "npm run build && npm run format",
-    "build:lib": "rimraf lib/ && babel src/ --quiet --copy-files -d lib/",
-    "build:ts": "rimraf \"{src/**,lib/**,}.d.ts\" && tsc && type-coverage",
+    "build:ts": "rimraf \"{src/**,test/**,}.d.ts\" && tsc && type-coverage",
     "build:umd": "rollup --silent -c",
     "build:umdcheck": "printf 'ES5? ' && uglifyjs react-markdown.min.js > /dev/null && echo 'Yes'",
     "build": "run-s build:*",
