--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "@babel/preset-react": "^7.0.0",
     "@matejmazur/react-katex": "^3.0.0",
     "@rollup/plugin-babel": "^5.0.0",
-    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@testing-library/react": "^11.0.0",
@@ -114,7 +114,7 @@
     "eslint-plugin-react": "^7.0.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "eslint-plugin-security": "^1.0.0",
-    "jest": "^26.0.0",
+    "jest": "^27.0.0",
     "katex": "^0.13.0",
     "npm-run-all": "^4.0.0",
     "prettier": "^2.0.0",
@@ -167,6 +167,7 @@
     ]
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "coverageThreshold": {
       "global": {
         "branches": 100,
