--- a/package.json
+++ b/package.json
@@ -98,10 +98,6 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@matejmazur/react-katex": "^3.0.0",
-    "@rollup/plugin-babel": "^5.0.0",
-    "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-json": "^4.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.0",
     "@types/react": "^17.0.0",
@@ -109,6 +105,7 @@
     "@types/react-is": "^17.0.0",
     "@types/react-test-renderer": "^17.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "esbuild": "^0.12.0",
     "eslint-config-xo-react": "^0.25.0",
     "eslint-plugin-es": "^4.0.0",
     "eslint-plugin-react": "^7.0.0",
@@ -128,19 +125,14 @@
     "remark-preset-wooorm": "^8.0.0",
     "remark-toc": "^7.0.0",
     "rimraf": "^3.0.0",
-    "rollup": "^2.0.0",
-    "rollup-plugin-node-polyfills": "^0.2.0",
-    "rollup-plugin-terser": "^7.0.0",
     "type-coverage": "^2.0.0",
     "typescript": "^4.0.0",
-    "uglify-js": "^3.0.0",
     "xo": "^0.38.0"
   },
   "scripts": {
     "prepack": "npm run build && npm run format",
     "build:ts": "rimraf \"{src/**,test/**,}.d.ts\" && tsc && type-coverage",
-    "build:umd": "rollup --silent -c",
-    "build:umdcheck": "printf 'ES5? ' && uglifyjs react-markdown.min.js > /dev/null && echo 'Yes'",
+    "build:umd": "esbuild src/react-markdown.js --bundle --minify --target=es2015 --outfile=react-markdown.min.js --global-name=ReactMarkdown --banner:js=\"(function (g, f) {typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = f() : typeof define === 'function' && define.amd ? define([], f) : (g = typeof globalThis !== 'undefined' ? globalThis : g || self, g.ReactMarkdown = f()); }(this, (function () { 'use strict';\" --footer:js=\"return ReactMarkdown;})));\"",
     "build": "run-s build:*",
     "format": "remark . -qfo --ignore-pattern test/ && prettier . -w --loglevel warn && xo --fix",
     "test": "run-s build format test:*",
