--- a/package.json
+++ b/package.json
@@ -97,36 +97,32 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@matejmazur/react-katex": "^3.0.0",
-    "@testing-library/react": "^12.0.0",
-    "@types/jest": "^26.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-is": "^17.0.0",
-    "@types/react-test-renderer": "^17.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "c8": "^7.8.0",
     "esbuild": "^0.12.0",
+    "esbuild-register": "^2.6.0",
     "eslint-config-xo-react": "^0.25.0",
     "eslint-plugin-es": "^4.0.0",
     "eslint-plugin-react": "^7.0.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "eslint-plugin-security": "^1.0.0",
-    "jest": "^27.0.0",
     "katex": "^0.13.0",
     "npm-run-all": "^4.0.0",
     "prettier": "^2.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-test-renderer": "^17.0.0",
     "rehype-raw": "^5.0.0",
     "remark-cli": "^9.0.0",
     "remark-gfm": "^1.0.0",
-    "remark-math": "^4.0.0",
     "remark-preset-wooorm": "^8.0.0",
     "remark-toc": "^7.0.0",
     "rimraf": "^3.0.0",
     "type-coverage": "^2.0.0",
     "typescript": "^4.0.0",
+    "uvu": "^0.5.1",
     "xo": "^0.38.0"
   },
   "scripts": {
@@ -135,8 +131,9 @@
     "build:umd": "esbuild src/react-markdown.js --bundle --minify --target=es2015 --outfile=react-markdown.min.js --global-name=ReactMarkdown --banner:js=\"(function (g, f) {typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = f() : typeof define === 'function' && define.amd ? define([], f) : (g = typeof globalThis !== 'undefined' ? globalThis : g || self, g.ReactMarkdown = f()); }(this, (function () { 'use strict';\" --footer:js=\"return ReactMarkdown;})));\"",
     "build": "run-s build:*",
     "format": "remark . -qfo --ignore-pattern test/ && prettier . -w --loglevel warn && xo --fix",
-    "test": "run-s build format test:*",
-    "test:unit": "jest --coverage"
+    "test": "run-s build format test:coverage",
+    "test:unit": "uvu -r esbuild-register test",
+    "test:coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov npm run test:unit"
   },
   "browserslist": "> 0.25%, not dead",
   "remarkConfig": {
@@ -212,16 +209,11 @@
         }
       },
       {
-        "envs": [
-          "jest"
-        ],
         "files": [
-          "test/**/*.js"
+          "test/**/*.jsx"
         ],
         "rules": {
           "react/no-children-prop": 0,
-          "react/display-name": 0,
-          "no-nested-ternary": 0,
           "react/prop-types": 0
         }
       }
